--- a/index.html
+++ b/index.html
@@ -324,7 +324,7 @@
             "W.208": "Giao nhau với đường ưu tiên: Các xe đi trên đường phải nhường đường cho xe đi trên đường ưu tiên.",
             "W.205": "Biển báo giao nhau với đường cùng cấp: Báo trước sắp đến nơi giao nhau với đường cùng cấp (không có đường nào ưu tiên). Cần chú ý quan sát, giảm tốc độ để đảm bảo an toàn khi tham gia giao thông.",
             "W.207": "Biển báo giao nhau với đường không ưu tiên: Chỉ được đặt trên đường ưu tiên. Báo trước sắp đến nơi giao nhau với không ưu tiên. Cần chú ý quan sát, giảm tốc độ để đảm bảo an toàn khi tham gia giao thông.",
-            "P.103": "Biển báo cấm xe ô tô".
+            "P.103": "Biển báo cấm xe ô tô",
 
            
             // Thêm các ý nghĩa cho các biển báo khác ở đây
