--- a/index.html
+++ b/index.html
@@ -320,11 +320,11 @@
         const MODEL_URL = "https://teachablemachine.withgoogle.com/models/7y8Dc7os8/";
         let model, maxPredictions;
         const signMeanings = {
-            "P.101": "Biển báo Đường cấm: Báo trước nơi giao nhau có điều khiển giao thông bằng tín hiệu đèn đỏ, hãy chú ý dừng lại.",
-            "W.208": "Giao nhau với đường ưu tiên: Các xe đi trên đường phải nhường đường cho xe đi trên đường ưu tiên.",
-            "W.205": "Biển báo giao nhau với đường cùng cấp: Báo trước sắp đến nơi giao nhau với đường cùng cấp (không có đường nào ưu tiên). Cần chú ý quan sát, giảm tốc độ để đảm bảo an toàn khi tham gia giao thông.",
-            "W.207": "Biển báo giao nhau với đường không ưu tiên: Chỉ được đặt trên đường ưu tiên. Báo trước sắp đến nơi giao nhau với không ưu tiên. Cần chú ý quan sát, giảm tốc độ để đảm bảo an toàn khi tham gia giao thông.",
-            "P.103": "Biển báo cấm xe ô tô",
+            "P.101": "Biển báo Đường cấm: Dùng để báo trước nơi giao nhau có điều khiển giao thông bằng tín hiệu đèn đỏ, hãy chú ý dừng lại.Cần chú ý quan sát, giảm tốc độ để đảm bảo an toàn khi tham gia giao thông.",
+            "W.208": "Biển báo Giao nhau với đường ưu tiên: Các xe đi trên đường phải nhường đường cho xe đi trên đường ưu tiên. Cần chú ý quan sát, giảm tốc độ để đảm bảo an toàn khi tham gia giao thông.",
+            "W.205": "Biển báo giao nhau với đường cùng cấp: Dùng để báo trước sắp đến nơi giao nhau với đường cùng cấp (không có đường nào ưu tiên). Cần chú ý quan sát, giảm tốc độ để đảm bảo an toàn khi tham gia giao thông.",
+            "W.207": "Biển báo giao nhau với đường không ưu tiên: Chỉ được đặt trên đường ưu tiên. Báo trước sắp đến nơi giao nhau với đường không ưu tiên. Cần chú ý quan sát, giảm tốc độ để đảm bảo an toàn khi tham gia giao thông.",
+            "P.103": "Biển báo cấm xe ô tô. Dùng để báo đường cấm các loại xe cơ giới kể cả xe máy 3 bánh có thùng đi qua, trừ xe máy 2 bánh, xe gắn máy và các xe được ưu tiên theo quy định.Cần chú ý quan sát, giảm tốc độ để đảm bảo an toàn khi tham gia giao thông. ",
 
            
             // Thêm các ý nghĩa cho các biển báo khác ở đây
