--- a/index.html
+++ b/index.html
@@ -78,6 +78,19 @@
             opacity: 0;
         }
 
+        .overlay {
+            position: absolute;
+            top: 50%;
+            left: 50%;
+            width: 70%;
+            height: 70%;
+            transform: translate(-50%, -50%);
+            border: 4px dashed var(--primary-color);
+            border-radius: 15px;
+            pointer-events: none; /* Không chặn các tương tác với video */
+            box-sizing: border-box;
+        }
+
         .button-container {
             display: flex;
             justify-content: center;
@@ -253,11 +266,10 @@
         <h1>Nhận Diện Biển Báo Giao Thông</h1>
         <div style="position: relative; width: 100%; max-width: 600px;">
             <video id="video" autoplay playsinline aria-label="Video từ camera"></video>
+            <div class="overlay"></div>
         </div>
         <img id="capturedImage" alt="Ảnh đã chụp">
         <canvas id="canvas" style="display: none;"></canvas>
-
-        <!-- Removed Zoom Container -->
 
         <div class="button-container">
             <button id="captureButton" aria-label="Chụp ảnh">Chụp Ảnh</button>
@@ -324,9 +336,8 @@
             "W.208": "Biển báo Giao nhau với đường ưu tiên: Các xe đi trên đường phải nhường đường cho xe đi trên đường ưu tiên. Cần chú ý quan sát, giảm tốc độ để đảm bảo an toàn khi tham gia giao thông.",
             "W.205": "Biển báo giao nhau với đường cùng cấp: Dùng để báo trước sắp đến nơi giao nhau với đường cùng cấp (không có đường nào ưu tiên). Cần chú ý quan sát, giảm tốc độ để đảm bảo an toàn khi tham gia giao thông.",
             "W.207": "Biển báo giao nhau với đường không ưu tiên: Chỉ được đặt trên đường ưu tiên. Báo trước sắp đến nơi giao nhau với đường không ưu tiên. Cần chú ý quan sát, giảm tốc độ để đảm bảo an toàn khi tham gia giao thông.",
-            "P.103": "Biển báo cấm xe ô tô. Dùng để báo đường cấm các loại xe cơ giới kể cả xe máy 3 bánh có thùng đi qua, trừ xe máy 2 bánh, xe gắn máy và các xe được ưu tiên theo quy định.Cần chú ý quan sát, giảm tốc độ để đảm bảo an toàn khi tham gia giao thông. ",
+            "P.103": "Biển báo cấm xe ô tô. Dùng để báo đường cấm các loại xe cơ giới kể cả xe máy 3 bánh có thùng đi qua, trừ xe máy 2 bánh, xe gắn máy và các xe được ưu tiên theo quy định.Cần chú ý quan sát, giảm tốc độ để đảm bảo an toàn khi tham gia giao thông.",
 
-           
             // Thêm các ý nghĩa cho các biển báo khác ở đây
         };
 
@@ -356,7 +367,6 @@
 
             try {
                 const context = canvas.getContext('2d');
-                const zoom = 1; // Removed zoom functionality
                 const videoWidth = video.videoWidth;
                 const videoHeight = video.videoHeight;
 
@@ -364,14 +374,18 @@
                     throw new Error("Video chưa sẵn sàng.");
                 }
 
-                const scaledWidth = videoWidth / zoom;
-                const scaledHeight = videoHeight / zoom;
-                const sx = (videoWidth - scaledWidth) / 2;
-                const sy = (videoHeight - scaledHeight) / 2;
+                // Kích thước và vị trí của overlay (70% của video)
+                const overlayWidth = videoWidth * 0.7;
+                const overlayHeight = videoHeight * 0.7;
+                const sx = (videoWidth - overlayWidth) / 2;
+                const sy = (videoHeight - overlayHeight) / 2;
 
-                canvas.width = videoWidth;
-                canvas.height = videoHeight;
-                context.drawImage(video, sx, sy, scaledWidth, scaledHeight, 0, 0, videoWidth, videoHeight);
+                // Cài đặt kích thước canvas theo kích thước overlay
+                canvas.width = overlayWidth;
+                canvas.height = overlayHeight;
+
+                // Vẽ phần ảnh trong khu vực overlay vào canvas
+                context.drawImage(video, sx, sy, overlayWidth, overlayHeight, 0, 0, overlayWidth, overlayHeight);
 
                 const imageDataURL = canvas.toDataURL('image/png');
                 capturedImage.src = imageDataURL;
