--- a/index.html
+++ b/index.html
@@ -332,7 +332,7 @@
         const overlay = document.querySelector('.overlay');
         let stream = null;
         let isProcessing = false;
-        const MODEL_URL = "https://uan-khkt2024.github.io/bienbaogiaothong/model/";
+        const MODEL_URL = "https://duan-khkt2024.github.io/bienbaogiaothong/model/";
         let model;
         let labels = []; // Danh sách nhãn sẽ được tải từ metadata.json
 
